Add background image and some header text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
     <title>Jurassic Mix-up</title>
 </head>
 <body>
-    
+  <header class="page-header">
+    <h1>Jurassic Mix-up!</h1>
+  </header>
+
+    <div>
+      <h2>Help!!............ some of the dionosaurs have escaped from thier enclosure, 
+        can you pair them back up so we can get them back in safe and sound... before they find YOU!</h2>
+    </div>
+
+    <section>
+      <div class="game-container">
+        <div class="info-container col-9">
+            <div class="game-info">
+              <span id="timer">Timer</span>
+            </div>
+            <div>
+              <span id="flips">Flips</span>
+            </div>
+        </div>
+
+      </div>
+    </section>
 
     <script src="assets/js/script.js"></script>
 </body>
