Add timer and moves buttons

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
     </div>
 
     <section>
-      <div class="game-container">
-        <div class="info-container col-9">
+      <div class="game-container col-3 col-s-3">
             <div class="game-info">
               <span id="timer">Timer</span>
             </div>
-            <div>
+
+            <div class="game-info">
               <span id="flips">Flips</span>
             </div>
-        </div>
 
       </div>
     </section>
