Add style to buttons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <section>
-      <div class="game-container col-3 col-s-3">
+      <div class="game-container col-6 col-m-9 col-s-9">
             <div class="game-info">
               <span id="timer">Timer</span>
             </div>
