Add footer details

--- a/index.html
+++ b/index.html
@@ -48,11 +48,25 @@
       <img src="assets/images/Dino-6.jpg" alt="" class="game-card" data-id="13" id="box-14">
       <img src="assets/images/Dino-7.jpg" alt="" class="game-card" data-id="14" id="box-15">
       <img src="assets/images/Dino-8.jpg" alt="" class="game-card" data-id="15" id="box-16">
-
-      <div>
-
-      </div>
     </section>
+
+    <div class="footer">
+      <p>Copyright: Jurassic Mix-up 2021</p>
+      <ul class="social-media">
+          <li>
+              <a href="http://facebook.com" target="_blank" rel="noopener" 
+              aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+          </li>
+          <li>
+              <a href="http://twitter.com" target="_blank" rel="noopener" 
+              aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+          </li>
+          <li>
+              <a href="http://instagram.com" target="_blank" rel="noopener" 
+              aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram-square"></i></a>
+          </li>
+      </ul>
+  </div>
 
     <script src="assets/js/script.js"></script>
 </body>
