Add style to footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       </div>
     </section>
-    <section class="game-wrap col-7 col-m-9 col-s-9">
+    <section class="game-wrap col-7 col-s-9">
       <img src="assets/images/Dino-1.jpg" alt="" class="game-card" data-id="0" id="box-1">
       <img src="assets/images/Dino-2.jpg" alt="" class="game-card" data-id="1" id="box-2">
       <img src="assets/images/Dino-3.jpg" alt="" class="game-card" data-id="2" id="box-3">
@@ -50,7 +50,7 @@
       <img src="assets/images/Dino-8.jpg" alt="" class="game-card" data-id="15" id="box-16">
     </section>
 
-    <div class="footer">
+    <footer>
       <p>Copyright: Jurassic Mix-up 2021</p>
       <ul class="social-media">
           <li>
@@ -66,8 +66,9 @@
               aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram-square"></i></a>
           </li>
       </ul>
-  </div>
+    </footer>
 
     <script src="assets/js/script.js"></script>
 </body>
+<script src="https://kit.fontawesome.com/88200f190d.js" crossorigin="anonymous"></script>
 </html>
