Add start button ready to add javascript to set to countdown timer function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <section>
       <div class="game-container col-6 col-m-9 col-s-9">
             <div class="game-info">
-              <span id="timer">Timer</span>
+              <span id="timer">Time 10</span>
+              <button id="start-button">Start</button>
             </div>
 
             <div class="game-info">
