--- a/index.html
+++ b/index.html
@@ -20,35 +20,40 @@
     </div>
 
     <section>
-      <div class="game-container col-6 col-m-9 col-s-9">
+      <div class="game-container col-s-11 col-m-8 col-8">
             <div class="game-info">
-              <span id="timer">Time 10</span>
-              <button id="start-button">Start</button>
+              <span id="timer">Time 0.00</span>
             </div>
 
             <div class="game-info">
               <span id="flips">Flips</span>
             </div>
-
+          <div class="game-wrap">
+              <img src="assets/images/Dino-1.jpg" alt="" class="game-card" data-id="0" id="box-1">
+              <img src="assets/images/Dino-2.jpg" alt="" class="game-card" data-id="1" id="box-2">
+              <img src="assets/images/Dino-3.jpg" alt="" class="game-card" data-id="2" id="box-3">
+              <img src="assets/images/Dino-4.jpg" alt="" class="game-card" data-id="3" id="box-4">
+              <img src="assets/images/Dino-5.jpg" alt="" class="game-card" data-id="4" id="box-5">
+              <img src="assets/images/Dino-6.jpg" alt="" class="game-card" data-id="5" id="box-6">
+              <img src="assets/images/Dino-7.jpg" alt="" class="game-card" data-id="6" id="box-7">
+              <img src="assets/images/Dino-8.jpg" alt="" class="game-card" data-id="7" id="box-8">
+              <img src="assets/images/Dino-1.jpg" alt="" class="game-card" data-id="8" id="box-9">
+              <img src="assets/images/Dino-2.jpg" alt="" class="game-card" data-id="9" id="box-10">
+              <img src="assets/images/Dino-3.jpg" alt="" class="game-card" data-id="10" id="box-11">
+              <img src="assets/images/Dino-4.jpg" alt="" class="game-card" data-id="11" id="box-12">
+              <img src="assets/images/Dino-5.jpg" alt="" class="game-card" data-id="12" id="box-13">
+              <img src="assets/images/Dino-6.jpg" alt="" class="game-card" data-id="13" id="box-14">
+              <img src="assets/images/Dino-7.jpg" alt="" class="game-card" data-id="14" id="box-15">
+              <img src="assets/images/Dino-8.jpg" alt="" class="game-card" data-id="15" id="box-16">
+          </div>
       </div>
     </section>
-    <section class="game-wrap col-7 col-s-9">
-      <img src="assets/images/Dino-1.jpg" alt="" class="game-card" data-id="0" id="box-1">
-      <img src="assets/images/Dino-2.jpg" alt="" class="game-card" data-id="1" id="box-2">
-      <img src="assets/images/Dino-3.jpg" alt="" class="game-card" data-id="2" id="box-3">
-      <img src="assets/images/Dino-4.jpg" alt="" class="game-card" data-id="3" id="box-4">
-      <img src="assets/images/Dino-5.jpg" alt="" class="game-card" data-id="4" id="box-5">
-      <img src="assets/images/Dino-6.jpg" alt="" class="game-card" data-id="5" id="box-6">
-      <img src="assets/images/Dino-7.jpg" alt="" class="game-card" data-id="6" id="box-7">
-      <img src="assets/images/Dino-8.jpg" alt="" class="game-card" data-id="7" id="box-8">
-      <img src="assets/images/Dino-1.jpg" alt="" class="game-card" data-id="8" id="box-9">
-      <img src="assets/images/Dino-2.jpg" alt="" class="game-card" data-id="9" id="box-10">
-      <img src="assets/images/Dino-3.jpg" alt="" class="game-card" data-id="10" id="box-11">
-      <img src="assets/images/Dino-4.jpg" alt="" class="game-card" data-id="11" id="box-12">
-      <img src="assets/images/Dino-5.jpg" alt="" class="game-card" data-id="12" id="box-13">
-      <img src="assets/images/Dino-6.jpg" alt="" class="game-card" data-id="13" id="box-14">
-      <img src="assets/images/Dino-7.jpg" alt="" class="game-card" data-id="14" id="box-15">
-      <img src="assets/images/Dino-8.jpg" alt="" class="game-card" data-id="15" id="box-16">
+
+    <section>
+      <h3><Score:<span id="result"></span></h3>
+
+      <div class="grid">
+      </div>
     </section>
 
     <footer>
