--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="game-info">
-              <h3> Flips:<span id="result"></span></h3>
+              <h3> Results:<span id="result"></span></h3>
             </div>
       </div>
     </section>
