Added start, click to restart and victory elements and styled them also

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <title>Jurassic Mix-up</title>
 </head>
 <body>
-  <audio src="/workspace/Jurassic-mix/roar.mp3.mp3" id="mySound" loop= "loop"></audio>
   <header class="page-header">
     <h1>Jurassic Mix-up!</h1>
   </header>
+  <div class="overlay-text">Click to Start</div>
+  <div id="game-over" class="overlay-text">GAME OVER <span class="overlay-text-small">Click to Restart</span></div>
+  <div id="victory-text" class="overlay-text">VICTORY <span class="overlay-text-small">Click to Restart</span></div>
 
     <div>
       <h2>Help!!............ some of the dionosaurs have escaped from thier enclosure, 
@@ -31,7 +33,7 @@
       </div>
 
 
-      <div class="card ">
+      <div class="card">
         <div class="card-back card-face">
             <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
         </div>
@@ -41,7 +43,7 @@
         </div>
       </div>
 
-      <div class="card ">
+      <div class="card">
         <div class="card-back card-face">
               <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
         </div>
