--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Memory card flip game Dinosaur theme">
-  <meta name="keywords" content="memory game, flip card memory game, flip card game, game, flip card, dinosaur, jurassic">
+    <meta name="keywords" content="memory game, flip card memory game, flip card game, game, flip card, dinosaur, jurassic">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Jurassic Mix-up</title>
 </head>
@@ -13,7 +13,7 @@
   <header class="page-header">
     <h1>Jurassic Mix-up!</h1>
   </header>
-  <div class="overlay-text">Click to Start</div>
+  <div class="overlay-text visible">Click to Start</div>
   <div id="game-over" class="overlay-text">GAME OVER <span class="overlay-text-small">Click to Restart</span></div>
   <div id="victory-text" class="overlay-text">VICTORY <span class="overlay-text-small">Click to Restart</span></div>
 
@@ -202,7 +202,6 @@
           </li>
       </ul>
     </footer>
-
     <script src="assets/js/script.js"></script>
 </body>
 <script src="https://kit.fontawesome.com/88200f190d.js" crossorigin="anonymous"></script>
