Adding the Features sections to the ReadMe

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div id="victory-text" class="overlay-text">VICTORY <span class="overlay-text-small">Click to Restart</span></div>
 
     <div>
-      <h2>Help!!............ some of the dionosaurs have escaped from thier enclosure, 
-        can you pair them back up so we can get them back in safe and sound... before they find YOU!</h2>
+      <h2>Help!!............ some of the dinosaurs have escaped from thier enclosure, 
+        can you pair them back up so we can get them back in safe and sound... before they find YOU! Flip over each card, if they are not a match, they will hide again, try to remember where they all are and match them all up.. before the timer runs out.</h2>
     </div>
 
     <div class="game-container">
