Finish of the ReadMe file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-            <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+            <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
 
         <div class="card-front card-face">
@@ -46,7 +46,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-              <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+              <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
 
         <div class="card-front card-face">
@@ -56,7 +56,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-            <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+            <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
             <img class="card-value" src="assets/images/pterosaur.jpg" alt="Image of a Pterosaur">
@@ -65,7 +65,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-            <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+            <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
             <img class="card-value" src="assets/images/pterosaur.jpg" alt="Image of a Pterosaur">
@@ -74,7 +74,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
           <img class="card-value" src="assets/images/brachiosaurus.jpg" alt="Image of a Brachiosaurus">
@@ -83,7 +83,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
           <img class="card-value" src="assets/images/brachiosaurus.jpg" alt="Image of a Brachiosaurus">
@@ -92,7 +92,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-           <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+           <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
            <img class="card-value" src="assets/images/tricerotops.jpg" alt="Image of a Tricerotops">
@@ -101,7 +101,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
           <img class="card-value" src="assets/images/tricerotops.jpg" alt="Image of a Tricerotops">
@@ -110,7 +110,7 @@
 
       <div class="card">
         <div class="card-back card-face"> 
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
            <img class="card-value" src="assets/images/spinasaurus.jpg" alt="Image of a Spinasaurus">
@@ -119,7 +119,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-           <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+           <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
            <img class="card-value" src="assets/images/spinasaurus.jpg" alt="Image of a Spinasaurus">
@@ -128,7 +128,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-           <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+           <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
           <img class="card-value" src="assets/images/iguanodon.jpg" alt="Image of a Iguanodon">
@@ -137,7 +137,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
           <img class="card-value" src="assets/images/iguanodon.jpg" alt="Image of a Iguanodon">
@@ -146,7 +146,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
            <img class="card-value" src="assets/images/ankylosaurid.jpg" alt="Image of a Ankylosaurid">
@@ -155,9 +155,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-          <img class="eyes" 
-          src="assets/images/eyes.jpg" 
-          alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
           <img class="card-value" src="assets/images/ankylosaurid.jpg" alt="Image of a Ankylosaurid">
@@ -166,9 +164,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-          <img class="eyes" 
-          src="assets/images/eyes.jpg" 
-          alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
             <img class="card-value" src="assets/images/stegosaurus.jpg" alt="Image of a Stegosaurus">
@@ -177,7 +173,7 @@
 
       <div class="card">
         <div class="card-back card-face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes"></img>
+          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
         </div>
         <div class="card-front card-face">
           <img class="card-value" src="assets/images/stegosaurus.jpg" alt="Image of a Stegosaurus">
