--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 
     <div>
       <h2>Help!!............ some of the dinosaurs have escaped from thier enclosure, 
-        can you pair them back up so we can get them back in safe and sound... before they find YOU! Flip over each card, if they are not a match, they will hide again, try to remember where they all are and match them all up.. before the timer runs out.</h2>
+        can you pair them back up so we can get them back in safe and sound... before they find YOU! </h2>
+    </div>
+
+    <div>
+      <h1>Instructions</h1>
+      <h3>Flip over each card, if they are not a match, they will hide again, try to remember where they all are and match them all up.. before the timer runs out.</h3>
     </div>
 
     <div class="game-container">
