Add feedback form

--- a/index.html
+++ b/index.html
@@ -186,6 +186,29 @@
       </div>
     </div>
 
+    <section>
+      <div class="row"  id="contact-section">
+          <h2 class="links-head">Feedback</h2>
+              <div class="col-6 col-s-12">
+                      <p>
+                          We welcome your feedback.
+                      </p>
+                          <form id="contact">
+                              <label for="fname">First Name:</label>
+                              <input type="text" name="fname" id="fname" placeholder=" First Name" required><br>
+                              <label for="lname">Last Name:</label>
+                              <input type="text" name="lname" id="lname" placeholder=" Last Name" required><br>
+                              <label for="email">Email Address:</label>
+                              <input type="email" name="email" id="email" required><br>
+                              <label for="subject">Feedback:</label><br>
+                              <textarea id="subject" name="subject" placeholder=" Further info."></textarea><br>
+                  
+                              <input type="submit" value="Submit" id="submit">
+                          </form>  
+              </div>
+      </div>
+  </section>
+
 
     <footer>
       <p>Copyright: Jurassic Mix-up 2021</p>
