Style feedback section

--- a/index.html
+++ b/index.html
@@ -187,9 +187,8 @@
     </div>
 
     <section>
-      <div class="row"  id="contact-section">
-          <h2 class="links-head">Feedback</h2>
-              <div class="col-6 col-s-12">
+      <div id="contact-section">
+              <div>
                       <p>
                           We welcome your feedback.
                       </p>
@@ -201,7 +200,7 @@
                               <label for="email">Email Address:</label>
                               <input type="email" name="email" id="email" required><br>
                               <label for="subject">Feedback:</label><br>
-                              <textarea id="subject" name="subject" placeholder=" Further info."></textarea><br>
+                              <textarea id="subject" name="subject" placeholder=" Feedback"></textarea><br>
                   
                               <input type="submit" value="Submit" id="submit">
                           </form>  
