Add easier level section and style

--- a/easy.html
+++ b/easy.html
@@ -17,7 +17,7 @@
   </header>
   <div class="overlay-text visible">Click to Start</div>
   <div id="game-over" class="overlay-text">GAME OVER <span class="overlay-text-small">Click to Restart</span></div>
-  <div id="victory-text" class="overlay-text">You did it! all back safe and sound! <span class="overlay-text-small">Click to Restart</span></div>
+  <div id="victory-text" class="overlay-text">You did it, all back safe and sound! <span class="overlay-text-small">Click to Restart</span></div>
 
     <div>
       <h2>Help!!............ some of the dinosaurs have escaped from thier enclosure, 
@@ -32,11 +32,11 @@
     <div class="game-container">
       <div class="game-info-container">
         <div class="game-info">
-          Time <span id="time-remaining">100</span>
+          Time <span id="time-remaining">200</span>
         </div>
         <div class="game-info">
-          <a href="easy.html">Easier Level</a>
-      </div>
+            <a href="index.html">Harder Level</a>
+        </div>
         <div class="game-info">
           Flips <span id="flips">0</span>
         </div>
@@ -114,78 +114,6 @@
         </div>
         <div class="front face">
           <img class="value" src="assets/images/tricerotops.jpg" alt="Image of a Tricerotops">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="back face"> 
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
-        </div>
-        <div class="front face">
-           <img class="value" src="assets/images/spinasaurus.jpg" alt="Image of a Spinasaurus">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="back face">
-           <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
-        </div>
-        <div class="front face">
-           <img class="value" src="assets/images/spinasaurus.jpg" alt="Image of a Spinasaurus">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="back face">
-           <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
-        </div>
-        <div class="front face">
-          <img class="value" src="assets/images/iguanodon.jpg" alt="Image of a Iguanodon">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="back face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
-        </div>
-        <div class="front face">
-          <img class="value" src="assets/images/iguanodon.jpg" alt="Image of a Iguanodon">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="back face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
-        </div>
-        <div class="front face">
-           <img class="value" src="assets/images/ankylosaurid.jpg" alt="Image of a Ankylosaurid">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="back face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
-        </div>
-        <div class="front face">
-          <img class="value" src="assets/images/ankylosaurid.jpg" alt="Image of a Ankylosaurid">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="back face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
-        </div>
-        <div class="front face">
-            <img class="value" src="assets/images/stegosaurus.jpg" alt="Image of a Stegosaurus">
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="back face">
-          <img class="eyes" src="assets/images/eyes.jpg" alt="Scary dinosaur eyes">
-        </div>
-        <div class="front face">
-          <img class="value" src="assets/images/stegosaurus.jpg" alt="Image of a Stegosaurus">
         </div>
       </div>
     </div>
